--- a/docs/docs/genai/eval-monitor/concepts/judges/index.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/index.mdx
@@ -41,11 +41,11 @@ MLflow provides research-validated judges for common use cases:
 
 ```python
 from mlflow.genai.judges import (
-    is_safe,              # Content safety
-    is_relevant,          # Query relevance
-    is_grounded,          # RAG grounding
-    is_correct,           # Factual accuracy
-    is_context_sufficient # Retrieval quality
+    is_safe,  # Content safety
+    is_relevant,  # Query relevance
+    is_grounded,  # RAG grounding
+    is_correct,  # Factual accuracy
+    is_context_sufficient,  # Retrieval quality
 )
 ```
 
