--- a/docs/docs/genai/eval-monitor/custom-scorers.mdx
+++ b/docs/docs/genai/eval-monitor/custom-scorers.mdx
@@ -13,7 +13,7 @@ Custom scorers offer the ultimate flexibility to define precisely how your GenAI
 
 Use custom scorers for the following scenarios:
 
-1. Defining a custom hueristic or code-based evaluation metric
+1. Defining a custom heuristic or code-based evaluation metric
 2. Customizing how the data from your app's trace is mapped to [Databricks' research-backed LLM judges](/genai/eval-monitor/concepts/judges/index) in the [predefined LLM scorers](/genai/eval-monitor/predefined-judge-scorers)
 3. Creating an LLM judge with a custom prompt text using the [prompt-based LLM scorers](/genai/eval-monitor/custom-judge/create-prompt-judge) article.
 4. Using your own LLM model (rather than a Databricks-hosted LLM judge model) for evaluation
