--- a/docs/docs/genai/eval-monitor/concepts/judges/is_context_sufficient.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/is_context_sufficient.mdx
@@ -20,13 +20,18 @@ This judge is available through the predefined `RetrievalSufficiency` scorer for
 ```python
 from mlflow.genai.judges import is_context_sufficient
 
+
 def is_context_sufficient(
     *,
-    request: str,                    # User's question or query
-    context: Any,                    # Context to evaluate for relevance, can be any Python primitive or a JSON-seralizable dict
-    expected_facts: Optional[list[str]],       # List of expected facts (provide either expected_response or expected_facts)
-    expected_response: Optional[str] = None,  #  Ground truth response (provide either expected_response or expected_facts)
-    name: Optional[str] = None       # Optional custom name for display in the MLflow UIs
+    request: str,  # User's question or query
+    context: Any,  # Context to evaluate for relevance, can be any Python primitive or a JSON-seralizable dict
+    expected_facts: Optional[
+        list[str]
+    ],  # List of expected facts (provide either expected_response or expected_facts)
+    expected_response: Optional[
+        str
+    ] = None,  #  Ground truth response (provide either expected_response or expected_facts)
+    name: Optional[str] = None  # Optional custom name for display in the MLflow UIs
 ) -> mlflow.entities.Feedback:
     """Returns Feedback with 'yes' or 'no' value and a rationale"""
 ```
@@ -51,9 +56,9 @@ feedback = is_context_sufficient(
     request="What is the capital of France?",
     context=[
         {"content": "Paris is the capital of France."},
-        {"content": "Paris is known for its Eiffel Tower."}
+        {"content": "Paris is known for its Eiffel Tower."},
     ],
-    expected_facts=["Paris is the capital of France."]
+    expected_facts=["Paris is the capital of France."],
 )
 print(feedback.value)  # "yes"
 print(feedback.rationale)  # Explanation of sufficiency
@@ -61,14 +66,12 @@ print(feedback.rationale)  # Explanation of sufficiency
 # Example 2: Context lacks necessary information
 feedback = is_context_sufficient(
     request="What are MLflow's components?",
-    context=[
-        {"content": "MLflow is an open-source platform."}
-    ],
+    context=[{"content": "MLflow is an open-source platform."}],
     expected_facts=[
         "MLflow has four main components",
         "Components include Tracking",
-        "Components include Projects"
-    ]
+        "Components include Projects",
+    ],
 )
 print(feedback.value)  # "no"
 print(feedback.rationale)  # Explanation of what's missing
@@ -98,10 +101,8 @@ mlflow.openai.autolog()
 # Connect to a Databricks LLM via OpenAI using the same credentials as MLflow
 # Alternatively, you can use your own OpenAI credentials here
 mlflow_creds = mlflow.utils.databricks_utils.get_databricks_host_creds()
-client = OpenAI(
-  api_key=cred.token,
-  base_url=f"{cred.host}/serving-endpoints"
-)
+client = OpenAI(api_key=cred.token, base_url=f"{cred.host}/serving-endpoints")
+
 
 # Define a retriever function with proper span type
 @mlflow.trace(span_type="RETRIEVER")
@@ -112,13 +113,13 @@ def retrieve_docs(query: str) -> List[Document]:
             Document(
                 id="doc_1",
                 page_content="Paris is the capital of France.",
-                metadata={"source": "geography.txt"}
+                metadata={"source": "geography.txt"},
             ),
             Document(
                 id="doc_2",
                 page_content="France is a country in Western Europe.",
-                metadata={"source": "countries.txt"}
-            )
+                metadata={"source": "countries.txt"},
+            ),
         ]
     elif "mlflow components" in query.lower():
         # Incomplete retrieval - missing some components
@@ -126,7 +127,7 @@ def retrieve_docs(query: str) -> List[Document]:
             Document(
                 id="doc_3",
                 page_content="MLflow has multiple components including Tracking and Projects.",
-                metadata={"source": "mlflow_intro.txt"}
+                metadata={"source": "mlflow_intro.txt"},
             )
         ]
     else:
@@ -134,9 +135,10 @@ def retrieve_docs(query: str) -> List[Document]:
             Document(
                 id="doc_4",
                 page_content="General information about data science.",
-                metadata={"source": "ds_basics.txt"}
+                metadata={"source": "ds_basics.txt"},
             )
         ]
+
 
 # Define your RAG app
 @mlflow.trace
@@ -148,24 +150,23 @@ def rag_app(query: str):
     # Generate response
     messages = [
         {"role": "system", "content": f"Answer based on this context: {context}"},
-        {"role": "user", "content": query}
+        {"role": "user", "content": query},
     ]
 
     response = client.chat.completions.create(
         # This example uses Databricks hosted Claude.  If you provide your own OpenAI credentials, replace with a valid OpenAI model e.g., gpt-4o, etc.
         model="databricks-claude-3-7-sonnet",
-        messages=messages
+        messages=messages,
     )
 
     return {"response": response.choices[0].message.content}
+
 
 # Create evaluation dataset with ground truth
 eval_dataset = [
     {
         "inputs": {"query": "What is the capital of France?"},
-        "expectations": {
-            "expected_facts": ["Paris is the capital of France."]
-        }
+        "expectations": {"expected_facts": ["Paris is the capital of France."]},
     },
     {
         "inputs": {"query": "What are all the MLflow components?"},
@@ -175,17 +176,15 @@ eval_dataset = [
                 "Components include Tracking",
                 "Components include Projects",
                 "Components include Models",
-                "Components include Registry"
+                "Components include Registry",
             ]
-        }
-    }
+        },
+    },
 ]
 
 # Run evaluation with RetrievalSufficiency scorer
 eval_results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    predict_fn=rag_app,
-    scorers=[RetrievalSufficiency()]
+    data=eval_dataset, predict_fn=rag_app, scorers=[RetrievalSufficiency()]
 )
 ```
 
@@ -213,47 +212,50 @@ eval_dataset = [
         "outputs": {
             "retrieved_context": [
                 {"content": "MLflow simplifies ML lifecycle management."},
-                {"content": "MLflow provides experiment tracking and model versioning."},
-                {"content": "MLflow enables easy model deployment."}
+                {
+                    "content": "MLflow provides experiment tracking and model versioning."
+                },
+                {"content": "MLflow enables easy model deployment."},
             ]
         },
         "expectations": {
             "expected_facts": [
                 "MLflow simplifies ML lifecycle management",
                 "MLflow provides experiment tracking",
-                "MLflow enables model deployment"
+                "MLflow enables model deployment",
             ]
-        }
+        },
     },
     {
         "inputs": {"query": "How does MLflow handle model versioning?"},
         "outputs": {
-            "retrieved_context": [
-                {"content": "MLflow is an open-source platform."}
-            ]
+            "retrieved_context": [{"content": "MLflow is an open-source platform."}]
         },
         "expectations": {
             "expected_facts": [
                 "MLflow Model Registry handles versioning",
                 "Models can have multiple versions",
-                "Versions can be promoted through stages"
+                "Versions can be promoted through stages",
             ]
-        }
-    }
+        },
+    },
 ]
 
+
 @scorer
-def context_sufficiency_scorer(inputs: Dict[Any, Any], outputs: Dict[Any, Any], expectations: Dict[Any, Any]):
+def context_sufficiency_scorer(
+    inputs: Dict[Any, Any], outputs: Dict[Any, Any], expectations: Dict[Any, Any]
+):
     return is_context_sufficient(
         request=inputs["query"],
         context=outputs["retrieved_context"],
-        expected_facts=expectations["expected_facts"]
+        expected_facts=expectations["expected_facts"],
     )
+
 
 # Run evaluation
 eval_results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    scorers=[context_sufficiency_scorer]
+    data=eval_dataset, scorers=[context_sufficiency_scorer]
 )
 ```
 
