--- a/docs/docs/genai/eval-monitor/concepts/judges/is_grounded.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/is_grounded.mdx
@@ -16,11 +16,12 @@ This judge is available through the predefined `RetrievalGroundedness` scorer fo
 ```python
 from mlflow.genai.judges import is_grounded
 
+
 def is_grounded(
     *,
-    request: str,               # User's original query
-    response: str,              # Application's response
-    context: Any,               # Context to evaluate for relevance, can be any Python primitive or a JSON-seralizable dict
+    request: str,  # User's original query
+    response: str,  # Application's response
+    context: Any,  # Context to evaluate for relevance, can be any Python primitive or a JSON-seralizable dict
     name: Optional[str] = None  # Optional custom name for display in the MLflow UIs
 ) -> mlflow.entities.Feedback:
     """Returns Feedback with 'yes' or 'no' value and a rationale"""
@@ -47,8 +48,8 @@ feedback = is_grounded(
     response="Paris",
     context=[
         {"content": "Paris is the capital of France."},
-        {"content": "Paris is known for its Eiffel Tower."}
-    ]
+        {"content": "Paris is known for its Eiffel Tower."},
+    ],
 )
 print(feedback.value)  # "yes"
 print(feedback.rationale)  # Explanation of groundedness
@@ -57,9 +58,7 @@ print(feedback.rationale)  # Explanation of groundedness
 feedback = is_grounded(
     request="What is the capital of France?",
     response="Paris, which has a population of 10 million people",
-    context=[
-        {"content": "Paris is the capital of France."}
-    ]
+    context=[{"content": "Paris is the capital of France."}],
 )
 print(feedback.value)  # "no"
 print(feedback.rationale)  # Identifies unsupported claim about population
@@ -88,10 +87,8 @@ mlflow.openai.autolog()
 # Connect to a Databricks LLM via OpenAI using the same credentials as MLflow
 # Alternatively, you can use your own OpenAI credentials here
 mlflow_creds = mlflow.utils.databricks_utils.get_databricks_host_creds()
-client = OpenAI(
-  api_key=cred.token,
-  base_url=f"{cred.host}/serving-endpoints"
-)
+client = OpenAI(api_key=cred.token, base_url=f"{cred.host}/serving-endpoints")
+
 
 # Define a retriever function with proper span type
 @mlflow.trace(span_type="RETRIEVER")
@@ -102,22 +99,23 @@ def retrieve_docs(query: str) -> List[Document]:
             Document(
                 id="doc_1",
                 page_content="MLflow is an open-source platform for managing the ML lifecycle.",
-                metadata={"source": "mlflow_docs.txt"}
+                metadata={"source": "mlflow_docs.txt"},
             ),
             Document(
                 id="doc_2",
                 page_content="MLflow provides tools for experiment tracking, model packaging, and deployment.",
-                metadata={"source": "mlflow_features.txt"}
-            )
+                metadata={"source": "mlflow_features.txt"},
+            ),
         ]
     else:
         return [
             Document(
                 id="doc_3",
                 page_content="Machine learning involves training models on data.",
-                metadata={"source": "ml_basics.txt"}
+                metadata={"source": "ml_basics.txt"},
             )
         ]
+
 
 # Define your RAG app
 @mlflow.trace
@@ -129,32 +127,27 @@ def rag_app(query: str):
     # Generate response using LLM
     messages = [
         {"role": "system", "content": f"Answer based on this context: {context}"},
-        {"role": "user", "content": query}
+        {"role": "user", "content": query},
     ]
 
     response = client.chat.completions.create(
         # This example uses Databricks hosted Claude.  If you provide your own OpenAI credentials, replace with a valid OpenAI model e.g., gpt-4o, etc.
         model="databricks-claude-3-7-sonnet",
-        messages=messages
+        messages=messages,
     )
 
     return {"response": response.choices[0].message.content}
 
+
 # Create evaluation dataset
 eval_dataset = [
-    {
-        "inputs": {"query": "What is MLflow used for?"}
-    },
-    {
-        "inputs": {"query": "What are the main features of MLflow?"}
-    }
+    {"inputs": {"query": "What is MLflow used for?"}},
+    {"inputs": {"query": "What are the main features of MLflow?"}},
 ]
 
 # Run evaluation with RetrievalGroundedness scorer
 eval_results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    predict_fn=rag_app,
-    scorers=[RetrievalGroundedness()]
+    data=eval_dataset, predict_fn=rag_app, scorers=[RetrievalGroundedness()]
 )
 ```
 
@@ -174,9 +167,11 @@ eval_dataset = [
             "response": "MLflow is used for managing the ML lifecycle, including experiment tracking and model deployment.",
             "retrieved_context": [
                 {"content": "MLflow is a platform for managing the ML lifecycle."},
-                {"content": "MLflow includes capabilities for experiment tracking, model packaging, and deployment."}
-            ]
-        }
+                {
+                    "content": "MLflow includes capabilities for experiment tracking, model packaging, and deployment."
+                },
+            ],
+        },
     },
     {
         "inputs": {"query": "Who created MLflow?"},
@@ -184,25 +179,24 @@ eval_dataset = [
             "response": "MLflow was created by Databricks in 2018 and has over 10,000 contributors.",
             "retrieved_context": [
                 {"content": "MLflow was created by Databricks."},
-                {"content": "MLflow was open-sourced in 2018."}
-            ]
-        }
-    }
+                {"content": "MLflow was open-sourced in 2018."},
+            ],
+        },
+    },
 ]
+
 
 @scorer
 def groundedness_scorer(inputs: Dict[Any, Any], outputs: Dict[Any, Any]):
     return is_grounded(
         request=inputs["query"],
         response=outputs["response"],
-        context=outputs["retrieved_context"]
+        context=outputs["retrieved_context"],
     )
 
+
 # Run evaluation
-eval_results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    scorers=[groundedness_scorer]
-)
+eval_results = mlflow.genai.evaluate(data=eval_dataset, scorers=[groundedness_scorer])
 ```
 
 ## Interpreting Results
