--- a/docs/docs/genai/eval-monitor/concepts/judges/prompt-based-judge.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/prompt-based-judge.mdx
@@ -64,22 +64,18 @@ Choose the most appropriate rating:
 [[excellent]]: Empathetic, complete solution, proactive help offered
 [[good]]: Addresses the issue adequately with professional tone
 [[poor]]: Incomplete, unprofessional, or misses key concerns""",
-    numeric_values={
-        "excellent": 1.0,
-        "good": 0.7,
-        "poor": 0.0
-    }
+    numeric_values={"excellent": 1.0, "good": 0.7, "poor": 0.0},
 )
 
 # Direct usage
 feedback = response_quality_judge(
     request="My order arrived damaged!",
-    response="I'm so sorry to hear that. I've initiated a replacement order that will arrive tomorrow, and issued a full refund. Is there anything else I can help with?"
+    response="I'm so sorry to hear that. I've initiated a replacement order that will arrive tomorrow, and issued a full refund. Is there anything else I can help with?",
 )
 
-print(feedback.value)         # 1.0
-print(feedback.metadata)      # {"string_value": "excellent"}
-print(feedback.rationale)     # Detailed explanation of the rating
+print(feedback.value)  # 1.0
+print(feedback.metadata)  # {"string_value": "excellent"}
+print(feedback.rationale)  # Detailed explanation of the rating
 ```
 
 ## <a id="core-concepts"></a>Core concepts
@@ -94,7 +90,7 @@ from mlflow.genai.judges import create_prompt_judge
 judge = create_prompt_judge(
     assessment_name="formality",
     prompt_template="...",  # Your custom prompt with {{variables}} and [[choices]]
-    numeric_values={"formal": 1.0, "informal": 0.0}  # Optional numeric mapping
+    numeric_values={"formal": 1.0, "informal": 0.0},  # Optional numeric mapping
 )
 
 # Returns an mlflow.entities.Feedback object
@@ -199,8 +195,8 @@ Select satisfaction level:
         "satisfied": 0.75,
         "neutral": 0.5,
         "dissatisfied": 0.25,
-        "very_dissatisfied": 0.0
-    }
+        "very_dissatisfied": 0.0,
+    },
 )
 ```
 
@@ -229,8 +225,8 @@ Score the review quality:
         "thorough": 0.8,
         "adequate": 0.6,
         "superficial": 0.3,
-        "inadequate": 0.0
-    }
+        "inadequate": 0.0,
+    },
 )
 ```
 
@@ -262,8 +258,8 @@ Rate the resolution status:
         "fully_resolved": 1.0,
         "partially_resolved": 0.5,
         "unresolved": 0.0,
-        "escalated": 0.7  # Positive score for appropriate escalation
-    }
+        "escalated": 0.7,  # Positive score for appropriate escalation
+    },
 )
 
 # Empathy and tone judge
@@ -280,13 +276,9 @@ Rate the empathy shown:
 [[good]]: Shows understanding and appropriate concern
 [[adequate]]: Professional but somewhat impersonal
 [[poor]]: Cold, dismissive, or inappropriate emotional response""",
-    numeric_values={
-        "exceptional": 1.0,
-        "good": 0.75,
-        "adequate": 0.5,
-        "poor": 0.0
-    }
+    numeric_values={"exceptional": 1.0, "good": 0.75, "adequate": 0.5, "poor": 0.0},
 )
+
 
 # Create a comprehensive customer service scorer
 @scorer
@@ -295,21 +287,26 @@ def customer_service_quality(inputs, outputs, trace):
     feedbacks = []
 
     # Evaluate resolution status
-    feedbacks.append(resolution_judge(
-        customer_message=inputs.get("message", ""),
-        agent_response=outputs.get("response", ""),
-        issue_type=inputs.get("issue_type", "general")
-    ))
+    feedbacks.append(
+        resolution_judge(
+            customer_message=inputs.get("message", ""),
+            agent_response=outputs.get("response", ""),
+            issue_type=inputs.get("issue_type", "general"),
+        )
+    )
 
     # Evaluate empathy if customer shows emotion
     customer_emotion = inputs.get("detected_emotion", "neutral")
     if customer_emotion in ["frustrated", "angry", "upset", "worried"]:
-        feedbacks.append(empathy_judge(
-            customer_emotion=customer_emotion,
-            agent_response=outputs.get("response", "")
-        ))
+        feedbacks.append(
+            empathy_judge(
+                customer_emotion=customer_emotion,
+                agent_response=outputs.get("response", ""),
+            )
+        )
 
     return feedbacks
+
 
 # Example evaluation
 eval_data = [
@@ -317,18 +314,15 @@ eval_data = [
         "inputs": {
             "message": "I've been waiting 3 weeks for my refund! This is unacceptable!",
             "issue_type": "refund",
-            "detected_emotion": "angry"
+            "detected_emotion": "angry",
         },
         "outputs": {
             "response": "I completely understand your frustration - 3 weeks is far too long to wait for a refund. I'm escalating this to our finance team immediately. You'll receive your refund within 24 hours, plus a $50 credit for the inconvenience. I'm also sending you my direct email so you can reach me if there are any other delays."
-        }
+        },
     }
 ]
 
-results = mlflow.genai.evaluate(
-    data=eval_data,
-    scorers=[customer_service_quality]
-)
+results = mlflow.genai.evaluate(data=eval_data, scorers=[customer_service_quality])
 ```
 
 ### <a id="content-quality"></a>Content quality assessment
@@ -349,12 +343,7 @@ Rate the documentation quality:
 [[good]]: Covers topic well, mostly clear, could use minor improvements
 [[fair]]: Basic coverage, some unclear sections, missing important details
 [[poor]]: Confusing, incomplete, or significantly flawed""",
-    numeric_values={
-        "excellent": 1.0,
-        "good": 0.75,
-        "fair": 0.4,
-        "poor": 0.0
-    }
+    numeric_values={"excellent": 1.0, "good": 0.75, "fair": 0.4, "poor": 0.0},
 )
 
 # Marketing copy effectiveness
@@ -377,8 +366,8 @@ Evaluate effectiveness:
         "highly_effective": 1.0,
         "effective": 0.7,
         "moderately_effective": 0.4,
-        "ineffective": 0.0
-    }
+        "ineffective": 0.0,
+    },
 )
 ```
 
@@ -404,8 +393,8 @@ Rate the security review quality:
         "comprehensive": 1.0,
         "thorough": 0.75,
         "basic": 0.4,
-        "insufficient": 0.0
-    }
+        "insufficient": 0.0,
+    },
 )
 
 # Code clarity feedback judge
@@ -423,12 +412,7 @@ Rate the clarity feedback:
 [[good]]: Points out main clarity problems with helpful suggestions
 [[adequate]]: Basic feedback on obvious readability issues
 [[minimal]]: Superficial or missing important clarity feedback""",
-    numeric_values={
-        "excellent": 1.0,
-        "good": 0.7,
-        "adequate": 0.4,
-        "minimal": 0.0
-    }
+    numeric_values={"excellent": 1.0, "good": 0.7, "adequate": 0.4, "minimal": 0.0},
 )
 ```
 
@@ -451,12 +435,7 @@ Rate communication appropriateness:
 [[good]]: Generally clear and caring, minor room for improvement
 [[acceptable]]: Adequate but could be clearer or more empathetic
 [[poor]]: Unclear, uses too much jargon, or lacks appropriate empathy""",
-    numeric_values={
-        "excellent": 1.0,
-        "good": 0.75,
-        "acceptable": 0.5,
-        "poor": 0.0
-    }
+    numeric_values={"excellent": 1.0, "good": 0.75, "acceptable": 0.5, "poor": 0.0},
 )
 
 # Clinical note quality
@@ -478,8 +457,8 @@ Rate the clinical documentation:
         "comprehensive": 1.0,
         "complete": 0.7,
         "incomplete": 0.3,
-        "deficient": 0.0
-    }
+        "deficient": 0.0,
+    },
 )
 ```
 
@@ -523,8 +502,8 @@ Choose your preference:
         "slightly_prefer_a": -0.5,
         "equal": 0.0,
         "slightly_prefer_b": 0.5,
-        "strongly_prefer_b": 1.0
-    }
+        "strongly_prefer_b": 1.0,
+    },
 )
 
 # Example usage for model comparison
@@ -547,9 +526,7 @@ Start with evaluation to establish a baseline, then iterate based on data."""
 
 # Compare responses
 feedback = preference_judge(
-    question=question,
-    response_a=response_model_v1,
-    response_b=response_model_v2
+    question=question, response_a=response_model_v1, response_b=response_model_v2
 )
 
 print(f"Preference: {feedback.metadata['string_value']}")  # "strongly_prefer_b"
@@ -590,8 +567,8 @@ Which explanation is better?
         "a_slightly_better": -0.5,
         "equivalent": 0.0,
         "b_slightly_better": 0.5,
-        "b_much_better": 1.0
-    }
+        "b_much_better": 1.0,
+    },
 )
 
 # Empathy comparison for customer service
@@ -624,8 +601,8 @@ Which response shows better emotional intelligence?
         "a_better": -0.5,
         "both_good": 0.0,
         "b_better": 0.5,
-        "b_far_superior": 1.0
-    }
+        "b_far_superior": 1.0,
+    },
 )
 ```
 
@@ -646,15 +623,17 @@ def compare_prompt_versions(test_cases, prompt_v1, prompt_v2, model_client):
         feedback = preference_judge(
             question=test_case["question"],
             response_a=response_v1,
-            response_b=response_v2
+            response_b=response_v2,
         )
 
-        results.append({
-            "question": test_case["question"],
-            "preference": feedback.metadata["string_value"],
-            "score": feedback.value,
-            "rationale": feedback.rationale
-        })
+        results.append(
+            {
+                "question": test_case["question"],
+                "preference": feedback.metadata["string_value"],
+                "score": feedback.value,
+                "rationale": feedback.rationale,
+            }
+        )
 
     # Analyze results
     avg_score = sum(r["score"] for r in results) / len(results)
@@ -668,6 +647,7 @@ def compare_prompt_versions(test_cases, prompt_v1, prompt_v2, model_client):
 
     return results
 
+
 # Compare different model outputs
 def compare_models(questions, model_a, model_b, comparison_judge):
     """Compare two models across a set of questions"""
@@ -678,9 +658,7 @@ def compare_models(questions, model_a, model_b, comparison_judge):
         response_b = model_b.generate(question)
 
         feedback = comparison_judge(
-            question=question,
-            response_a=response_a,
-            response_b=response_b
+            question=question, response_a=response_a, response_b=response_b
         )
 
         # Count wins based on preference strength
@@ -726,14 +704,14 @@ Required Depth: {{depth_level}}
                 "expert": 1.0,
                 "proficient": 0.75,
                 "basic": 0.5,
-                "incorrect": 0.0
-            }
+                "incorrect": 0.0,
+            },
         )
 
         return judge(
             question=inputs["question"],
             response=outputs["response"],
-            depth_level=inputs.get("required_depth", "intermediate")
+            depth_level=inputs.get("required_depth", "intermediate"),
         )
 
     elif query_type == "support":
@@ -749,18 +727,13 @@ Customer Status: {{customer_status}}
 [[good]]: Addresses issue well, professional
 [[fair]]: Partially helpful but incomplete
 [[poor]]: Unhelpful or inappropriate""",
-            numeric_values={
-                "excellent": 1.0,
-                "good": 0.7,
-                "fair": 0.4,
-                "poor": 0.0
-            }
+            numeric_values={"excellent": 1.0, "good": 0.7, "fair": 0.4, "poor": 0.0},
         )
 
         return judge(
             issue=inputs["question"],
             response=outputs["response"],
-            customer_status=inputs.get("customer_status", "standard")
+            customer_status=inputs.get("customer_status", "standard"),
         )
 ```
 
@@ -779,29 +752,32 @@ def weighted_quality_scorer(inputs, outputs, trace):
             "judge": create_prompt_judge(
                 assessment_name="accuracy",
                 prompt_template="...",  # Your accuracy template
-                numeric_values={"high": 1.0, "medium": 0.5, "low": 0.0}
+                numeric_values={"high": 1.0, "medium": 0.5, "low": 0.0},
             ),
             "weight": 0.4,
-            "args": {"question": inputs["question"], "response": outputs["response"]}
+            "args": {"question": inputs["question"], "response": outputs["response"]},
         },
         {
             "judge": create_prompt_judge(
                 assessment_name="completeness",
                 prompt_template="...",  # Your completeness template
-                numeric_values={"complete": 1.0, "partial": 0.5, "incomplete": 0.0}
+                numeric_values={"complete": 1.0, "partial": 0.5, "incomplete": 0.0},
             ),
             "weight": 0.3,
-            "args": {"response": outputs["response"], "requirements": inputs.get("requirements", [])}
+            "args": {
+                "response": outputs["response"],
+                "requirements": inputs.get("requirements", []),
+            },
         },
         {
             "judge": create_prompt_judge(
                 assessment_name="clarity",
                 prompt_template="...",  # Your clarity template
-                numeric_values={"clear": 1.0, "adequate": 0.6, "unclear": 0.0}
+                numeric_values={"clear": 1.0, "adequate": 0.6, "unclear": 0.0},
             ),
             "weight": 0.3,
-            "args": {"response": outputs["response"]}
-        }
+            "args": {"response": outputs["response"]},
+        },
     ]
 
     # Collect all feedbacks
@@ -818,10 +794,11 @@ def weighted_quality_scorer(inputs, outputs, trace):
 
     # Add composite score as additional feedback
     from mlflow.entities import Feedback
+
     composite_feedback = Feedback(
         name="weighted_quality_score",
         value=weighted_score,
-        rationale=f"Weighted combination of {len(judges_config)} quality dimensions"
+        rationale=f"Weighted combination of {len(judges_config)} quality dimensions",
     )
     feedbacks.append(composite_feedback)
 
@@ -868,7 +845,7 @@ numeric_values = {
     "good": 0.75,
     "satisfactory": 0.5,
     "needs_improvement": 0.25,
-    "unacceptable": 0.0
+    "unacceptable": 0.0,
 }
 ```
 
@@ -878,8 +855,12 @@ numeric_values = {
 
 ```python
 # All judges use 0-1 scale
-quality_judge = create_prompt_judge(..., numeric_values={"high": 1.0, "medium": 0.5, "low": 0.0})
-accuracy_judge = create_prompt_judge(..., numeric_values={"accurate": 1.0, "partial": 0.5, "wrong": 0.0})
+quality_judge = create_prompt_judge(
+    ..., numeric_values={"high": 1.0, "medium": 0.5, "low": 0.0}
+)
+accuracy_judge = create_prompt_judge(
+    ..., numeric_values={"accurate": 1.0, "partial": 0.5, "wrong": 0.0}
+)
 ```
 
 **2. Leave gaps for future refinement**
@@ -888,9 +869,9 @@ accuracy_judge = create_prompt_judge(..., numeric_values={"accurate": 1.0, "part
 # Allows adding intermediate levels later
 numeric_values = {
     "excellent": 1.0,
-    "good": 0.7,    # Gap allows for "very_good" at 0.85
-    "fair": 0.4,    # Gap allows for "satisfactory" at 0.55
-    "poor": 0.0
+    "good": 0.7,  # Gap allows for "very_good" at 0.85
+    "fair": 0.4,  # Gap allows for "satisfactory" at 0.55
+    "poor": 0.0,
 }
 ```
 
@@ -898,20 +879,10 @@ numeric_values = {
 
 ```python
 # Academic grading scale
-academic_scale = {
-    "A": 4.0,
-    "B": 3.0,
-    "C": 2.0,
-    "D": 1.0,
-    "F": 0.0
-}
+academic_scale = {"A": 4.0, "B": 3.0, "C": 2.0, "D": 1.0, "F": 0.0}
 
 # Net Promoter Score scale
-nps_scale = {
-    "promoter": 1.0,      # 9-10
-    "passive": 0.0,       # 7-8
-    "detractor": -1.0     # 0-6
-}
+nps_scale = {"promoter": 1.0, "passive": 0.0, "detractor": -1.0}  # 9-10  # 7-8  # 0-6
 ```
 
 ### <a id="prompt-engineering"></a>Prompt engineering tips
@@ -980,8 +951,7 @@ The judge validates that:
 ```python
 # This will raise an error - no choices defined
 invalid_judge = create_prompt_judge(
-    assessment_name="invalid",
-    prompt_template="Rate the response: {{response}}"
+    assessment_name="invalid", prompt_template="Rate the response: {{response}}"
 )
 # ValueError: Prompt template must include choices denoted with [[CHOICE_NAME]]
 ```
@@ -997,7 +967,7 @@ invalid_judge = create_prompt_judge(
     prompt_template="""Choose:
     [[option_a]]: First option
     [[option_b]]: Second option""",
-    numeric_values={"option_a": 1.0}  # Missing option_b
+    numeric_values={"option_a": 1.0},  # Missing option_b
 )
 # ValueError: numeric_values keys must match the choices
 ```
@@ -1008,8 +978,7 @@ Missing template variables raise errors during execution:
 
 ```python
 judge = create_prompt_judge(
-    assessment_name="test",
-    prompt_template="{{request}} {{response}} [[good]]: Good"
+    assessment_name="test", prompt_template="{{request}} {{response}} [[good]]: Good"
 )
 
 # This will raise an error - missing 'response' variable
